--- a/src/options/options.html
+++ b/src/options/options.html
@@ -16,6 +16,10 @@
             <input type="text" id="url" name="url" placeholder="Enter homepage url here">
           </div>
           <div class="input-group">
+            <label for="statusUrl">Status URL</label>
+            <input type="text" id="statusUrl" name="statusUrl" placeholder="Enter status subscription url here">
+          </div>
+          <div class="input-group">
             <button type="submit" id="submitBtn" class="btn btn--primary">Save</button>
             <span id="flashMsg"></span>
           </div>
