--- a/src/options/options.html
+++ b/src/options/options.html
@@ -20,6 +20,10 @@
             <input type="text" id="statusUrl" name="statusUrl" placeholder="Enter status subscription url here">
           </div>
           <div class="input-group">
+            <label for="kioskName">Kiosk Name</label>
+            <input type="text" id="kioskName" name="kioskName" placeholder="Enter kiosk name here">
+          </div>
+          <div class="input-group">
             <button type="submit" id="submitBtn" class="btn btn--primary">Save</button>
             <span id="flashMsg"></span>
           </div>
