--- a/src/options/options.html
+++ b/src/options/options.html
@@ -30,6 +30,17 @@
         </form>
       </div>
     </section>
+    <section class="container">
+      <h2>Disable links on these pages</h2>
+      <div>
+        <p>Enter one URL or partial URL per line.</p>
+        <textarea id="disableUrls" rows="6" cols="60"></textarea>
+        <br />
+        <button id="save-disable-links">Save</button>
+        <span id="disable-links-status"></span>
+      </div>
+      <a href="https://www.google.com" target="_blank">Test</a>
+    </section>
   </main>
 </div>
 </body>
