add toggle maintenance mode for single kiosks

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -31,6 +31,17 @@
       </div>
     </section>
     <section class="container">
+      <h2>Toggle Maintenance For This Kiosk</h2>
+        <div class="input-group">
+          <label class="switch" for="toggleMaintenance">
+            <input type ="checkbox" id = "toggleMaintenance">
+            <span class ="slider"></span>
+          </label>
+          <span id="manualMaintenance"></span>
+        </div>
+
+    </section>
+    <section class="container">
       <h2>Disable links on these pages</h2>
       <div>
         <p>Enter one URL or partial URL per line.</p>
